GTK+-3.20 BlackMate: fix some general parameter,ie. -GtkScrolledWindow-scrollbar-spacing
- this removes the weird color in views beside scrollbars
- resize-grip is droped since 3.14

Not sure about the other parameter without Gtk in name.

--- a/desktop-themes/BlackMATE/gtk-3.0/gtk-widgets.css
+++ b/desktop-themes/BlackMATE/gtk-3.0/gtk-widgets.css
@@ -5,7 +5,7 @@
 	-GtkToolButton-icon-spacing: 4;
 	-textview-error-underline-color: @error_color;
 	-paned-handle-size: 5;
-	-scrolledwindow-scrollbar-spacing: 0;
+	-GtkScrolledWindow-scrollbar-spacing: 0;
 	/* this is more stylish with this theme */;
 	-GtkToolItemGroup-expander-size: 12;
 	-expander-expander-size: 12;
@@ -14,11 +14,6 @@
 	-GtkIMHtml-hyperlink-color: @link_color;
 	-GtkHTML-link-color: @link_color;
 	-WnckTasklist-fade-overlay-rect: 0;
-	/* this makes emacs behave weirdly */
-	/*border-radius: 3px;*/
-	/* disable focusline on active notebook tabs if focused*/
-	-GtkWindow-resize-grip-width: 14;
-	-GtkWindow-resize-grip-height: 12; 
 	outline-color: @focus_border;
 	outline-style: dashed;
 	outline-offset: 2px;
